[package]
name = "killport-tui"
version = "0.0.2"
edition = "2024"
authors = ["Josh"]
description = "A TUI tool to view ports and kill processes."
repository = "https://github.com/last1chosen/killport-tui"
license = "MIT"
keywords = ["cli", "port", "process", "kill", "tui"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"

[[bin]]
name = "kp"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29"
listeners = "0.3"
sysinfo = "0.37.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
